--- a/authors.html
+++ b/authors.html
@@ -44,7 +44,7 @@
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
-        <div class="fxs_poster fxs_big-poster" id="onboarding_authors">
+        <div class="fxs_poster fxs_big-poster">
             <h3 class="fxs_headline_medium">Authors preferences:</h3>
             <p class="fxs_entryPlain_txt_large">
                 <strong>Please choose your preferences from the options below. More than one option
