--- a/getApp.html
+++ b/getApp.html
@@ -45,68 +45,39 @@
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
         <div class="fxs_poster fxs_big-poster">
-            <h3 class="fxs_headline_medium">Newsletters preferences:</h3>
+            <h3 class="fxs_headline_medium">Don't let economic events get ahead of you</h3>
             <p class="fxs_entryPlain_txt_large">
-                <strong>Please choose your preferences from the options below. More than one option
-                    can be added!</strong>
+                <strong>Get FXS mobile app and receive early notifications from
+                    your selected economic events.</strong>
             </p>
-
-            <div class="fxs_flexbox_justify_between_wrap">
-                <input type="checkbox" class="fxs_hideElements" id="chip-1">
-                <label class="fxs_chip-checkbox" for="chip-1">
-                    <span class="fas fa-euro-sign" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">European Session</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-2">
-                <label class="fxs_chip-checkbox" for="chip-2">
-                    <span class="fas fa-dollar-sign" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">American Session</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-3">
-                <label class="fxs_chip-checkbox" for="chip-3">
-                    <span class="fas fa-yen-sign" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">Asian Session</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-4">
-                <label class="fxs_chip-checkbox" for="chip-4">
-                    <span class="fas fa-chart-line" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">The Week Ahead</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-5">
-                <label class="fxs_chip-checkbox" for="chip-5">
-                    <span class="fas fa-bell" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">Special Alerts</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-6">
-                <label class="fxs_chip-checkbox" for="chip-6">
-                    <span class="fas fa-calendar-check" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">Economic Calendar</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-7">
-                <label class="fxs_chip-checkbox" for="chip-7">
-                    <span class="fas fa-binoculars" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">Currencies Forecast</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-8">
-                <label class="fxs_chip-checkbox" for="chip-8">
-                    <span class="fas fa-chart-bar" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">Trading Ideas</span>
-                </label>
-                <input type="checkbox" class="fxs_hideElements" id="chip-9">
-                <label class="fxs_chip-checkbox" for="chip-9">
-                    <span class="fas fa-euro-sign" aria-hidden="true"></span>
-                    <span class="fxs_newsletter-name">Subscribe All</span>
+            <div class="fxs_marginBase_bottom">
+            </div>
+            <div class="fxs_formGroup">
+                <label class="fxs_checkboxGroup">
+                    <input type="checkbox" id="terms"> Send a link to my device to download FXS Mobile App.
                 </label>
             </div>
-
-
-
-            <div class="fxs_clearfix fxs_marginBase"></div>
-            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
-                <span class="far fa-arrow-circle-left" aria-hidden="true"></span> Keep reading the news
+            <div class="fxs_marginBase_bottom">
+            </div>
+            <a href="premium.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+                Complete account
             </a>
-            <a href="authors.html" class="fxs_btn fxs_btn_cta fxs_fRight">
-                Continue
+        </div>
+        <div class="fxs_poster fxs_big-poster">
+            <h3 class="fxs_headline_medium">Don't let economic events get ahead of you</h3>
+            <p class="fxs_entryPlain_txt_large">
+                <strong>Get FXS mobile app and receive early notifications from
+                    your selected economic events.</strong>
+            </p>
+            <div class="fxs_marginBase_bottom">
+            </div>
+            <div class="fxs_marginBase_bottom">
+            </div>
+            <a href="premium.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+                Get the app
+            </a>
+            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
+                 Keep reading the news
             </a>
         </div>
     </div>
