--- a/getPremium.html
+++ b/getPremium.html
@@ -44,50 +44,122 @@
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
-        <div class="fxs_poster fxs_big-poster" id="onboarding_authors">
+        <div class="fxs_poster fxs_big-poster">
             <h3 class="fxs_headline_medium">Enjoy the benefits of becoming an FXS Premium
                 Subscriber! - New features added, don’t miss them out!</h3>
             <p class="fxs_entryPlain_txt_large">
                 <strong>Boost your trading skills and take advantatge of FXStreet Premium Features</strong>
             </p>
             <ol class="fxs_list_unstyled">
-                    <li>
-                      <i class="fas fa-check" aria-hidden="true"></i><strong>FXS Signals </strong>  delivered daily
-                    </li>
-                    <li>
-                      <i class="fas fa-check" aria-hidden="true"></i> More than 
-                      <strong> 20 different strategies </strong>
-                       applied
-                    </li>
-                    <li>
-                      <i class="fas fa-check" aria-hidden="true"></i><strong>Telegram </strong>  channel
-                    </li>
-                    <li class="fxs_hidden_l">
-                      <i class="fas fa-check" aria-hidden="true"></i>Overseas 
-                      <strong> community</strong>
-                    </li>
-                    <li class="fxs_hidden_l">
-                      <i class="fas fa-check" aria-hidden="true"></i><strong>Live &amp; recorded  </strong>  webinars
-                    </li>
-                    <li class="fxs_hidden_l">
-                      <i class="fas fa-check" aria-hidden="true"></i>Multi-device 
-                      <strong>  notifications</strong>
-                    </li>
-                    <li class="fxs_hidden_l">
-                      <i class="fas fa-check" aria-hidden="true"></i>The 
-                      <strong>  most advanced trading tips and techniques</strong>
-                    </li>
-                    <li class="fxs_hidden_l">
-                      <i class="fas fa-check" aria-hidden="true"></i>Dedicated 
-                      <strong> teachers </strong>
-                       and 
-                      <strong> experienced traders</strong>
-                    </li>
-                    <li class="fxs_visible_l">
-                      <i class="fas fa-check" aria-hidden="true"></i><strong>..and much more!</strong>
-                    </li>
-                  </ol>
+                <li>
+                    <i class="fas fa-check" aria-hidden="true"></i><strong>FXS Signals </strong> delivered daily
+                </li>
+                <li>
+                    <i class="fas fa-check" aria-hidden="true"></i> More than
+                    <strong> 20 different strategies </strong>
+                    applied
+                </li>
+                <li>
+                    <i class="fas fa-check" aria-hidden="true"></i><strong>Telegram </strong> channel
+                </li>
+                <li class="fxs_hidden_l">
+                    <i class="fas fa-check" aria-hidden="true"></i>Overseas
+                    <strong> community</strong>
+                </li>
+                <li class="fxs_hidden_l">
+                    <i class="fas fa-check" aria-hidden="true"></i><strong>Live &amp; recorded </strong> webinars
+                </li>
+                <li class="fxs_hidden_l">
+                    <i class="fas fa-check" aria-hidden="true"></i>Multi-device
+                    <strong> notifications</strong>
+                </li>
+                <li class="fxs_hidden_l">
+                    <i class="fas fa-check" aria-hidden="true"></i>The
+                    <strong> most advanced trading tips and techniques</strong>
+                </li>
+                <li class="fxs_hidden_l">
+                    <i class="fas fa-check" aria-hidden="true"></i>Dedicated
+                    <strong> teachers </strong>
+                    and
+                    <strong> experienced traders</strong>
+                </li>
+                <li class="fxs_visible_l">
+                    <i class="fas fa-check" aria-hidden="true"></i><strong>..and much more!</strong>
+                </li>
+            </ol>
+            <div class="fxs_marginBase_bottom">
+            </div>
+            <hr class="fxs_divider_second">
+            <p class="fxs_entryPlain_txt_large fxs_txt_corp_dark_1_clr fxs_txt_center">
+                <strong>Choose the subscription plan that fits your needs</strong>
+            </p>
+            <!-- Bloque de pago actualizar ----------------------- -->
+            <div class="fxs_row" id="pricingTable">
+                <div class="fxs_col fxs_col_33">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom">
+                        <strong>
+                            &nbsp;
+                        </strong>
+                    </p>
+                    <div class="fxs_pricing_table_item fxs_marginBase_bottom">
+                        <div class="fxs_clearfix fxs_txt_center">
+                            <span class="fxs_headline_small fxs_nowrap">1 Month</span>
+                            <div class="fxs_marginHalf_bottom"></div>
+                            <span class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium">35€</span>
+                            <div class="fxs_marginBase"></div>
+                        </div>
+                        <a href="https://frontend-fxs.github.io/onboarding-payment/?price=35" class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small">
+                            Subscribe
+                        </a>
+                    </div>
+                </div>
+                <div class="fxs_col fxs_col_33">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_txt_center fxs_marginHalf_bottom">
+                        <strong>
+                            SAVE 10€
+                        </strong>
+                    </p>
+                    <div class="fxs_pricing_table_item fxs_marginBase_bottom">
+                        <div class="fxs_clearfix fxs_txt_center">
+                            <span class="fxs_headline_small fxs_nowrap">3 Months</span>
+                            <div class="fxs_marginHalf_bottom"></div>
+                            <span class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium">95€</span>
+                            <div class="fxs_marginBase"></div>
+                        </div>
+                        <a href="https://frontend-fxs.github.io/onboarding-payment/?price=95" class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small">
+                            Subscribe
+                        </a>
+                    </div>
+                </div>
+                <div class="fxs_col fxs_col_33">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_txt_center fxs_marginHalf_bottom">
+                        <strong>
+                            SAVE 100€
+                        </strong>
+                    </p>
+                    <div class="fxs_pricing_table_item fxs_pricing_featured_offer fxs_marginBase_bottom">
+                        <div class="fxs_clearfix fxs_txt_center">
+                            <span class="fxs_headline_small fxs_nowrap">12 Months</span>
+                            <div class="fxs_marginHalf_bottom"></div>
+                            <span class="fxs_pricing_table_value fxs_txt_weight_400 fxs_headline_medium">320€</span>
+                            <div class="fxs_marginBase"></div>
+                        </div>
+                        <a href="https://frontend-fxs.github.io/onboarding-payment/?price=320" class="fxs_btn fxs_btn_cta fxs_btn_block fxs_marginAuto fxs_btn_small">
+                            Subscribe
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- Fin bloque de pago----------------------- -->
+            <div class="fxs_clearfix fxs_marginBase"></div>
+            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
+                <span class="far fa-arrow-circle-left" aria-hidden="true"></span> Keep reading the news
+            </a>
+            <a href="premium.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+                Continue without subscribing
+            </a>
         </div>
+
     </div>
     <footer class="fxs_footer fxs_modal_footer">
         <p>&nbsp;</p>
