All pages created

--- a/newsletter.html
+++ b/newsletter.html
@@ -37,10 +37,10 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="#"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
-            <a href="/" class="fxs_logo"></a>
+            <a href="index.html" class="fxs_logo"></a>
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
@@ -102,7 +102,7 @@
 
 
             <div class="fxs_clearfix fxs_marginBase"></div>
-            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
+            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
                 <span class="far fa-arrow-circle-left" aria-hidden="true"></span> Keep reading the news
             </a>
             <a href="authors.html" class="fxs_btn fxs_btn_cta fxs_fRight">
