--- a/getApp.html
+++ b/getApp.html
@@ -37,10 +37,10 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="#"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
-            <a href="/" class="fxs_logo"></a>
+            <a href="index.html" class="fxs_logo"></a>
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
@@ -59,7 +59,7 @@
             </div>
             <div class="fxs_marginBase_bottom">
             </div>
-            <a href="premium.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+            <a href="index.html" class="fxs_btn fxs_btn_cta fxs_fRight">
                 Complete account
             </a>
         </div>
@@ -73,10 +73,10 @@
             </div>
             <div class="fxs_marginBase_bottom">
             </div>
-            <a href="premium.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+            <a href="https://play.google.com/store/apps/details?id=com.fxstreet.forexnews&hl=en" class="fxs_btn fxs_btn_cta fxs_fRight">
                 Get the app
             </a>
-            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
+            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
                  Keep reading the news
             </a>
         </div>
