--- a/form.html
+++ b/form.html
@@ -52,6 +52,7 @@
                     and start your FXS Premium experience - It will take you only a
                     minute!</strong>
             </p>
+            <div class="fxs_clearfix fxs_marginBase"></div>
             <div class="fxs_formGroup">
                 <label>YOUR NAME</label>
                 <input type="text" class="fxs_textInput" placeholder="Write your name">
@@ -319,7 +320,7 @@
 
             <div class="fxs_clearfix fxs_marginBase"></div>
             <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
-                <span class="far fa-arrow-circle-left" aria-hidden="true"></span> Keep reading the news
+                <span class="fas fa-angle-double-left"></span> Keep reading the news
             </a>
             <a href="newsletter.html" class="fxs_btn fxs_btn_cta fxs_fRight">
                 Continue
