--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </div>
     <p>
-        <a href="form.html"></a>
+        <a href="form.html">Complete User data form</a>
     </p>
     <footer class="fxs_footer fxs_modal_footer">
         <p>&nbsp;</p>
