--- a/authors.html
+++ b/authors.html
@@ -67,10 +67,8 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Valeria Bednarik</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
-                                Chief Analyst <strong>FXStreet</strong>
-
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
+                                American Chief Analyst <strong>FXStreet</strong>
                             </span>
                         </span>
                     </address>
@@ -91,8 +89,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Yohay Elam</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                Analyst <strong>FXStreet</strong>
 
                             </span>
@@ -115,8 +112,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Tomas Salles</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Technical and Crypto Analyst <strong>FXStreet</strong>
 
                             </span>
@@ -139,8 +135,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Ed Ponsi, CTA</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Educator and author <strong>FXStreet</strong>
 
                             </span>
@@ -163,8 +158,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Sam Seiden</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Trader, Analyst, & Educator <strong>Independent Analyst</strong>
 
                             </span>
@@ -187,8 +181,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Nenad Kerkez</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Chief Analyst <strong>FXStreet</strong>
 
                             </span>
@@ -211,8 +204,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Gregor Horvat</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Chief Technical Strategist <strong>EW-Forecast</strong>
 
                             </span>
@@ -235,10 +227,8 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Kathy Lien</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Managing Director <strong>BK Asset Management</strong>
-
                             </span>
                         </span>
                     </address>
@@ -259,8 +249,7 @@
                             <span class="fxs_txt_size_large fxs_txt_corp_dark_1_clr">
                                 <strong>Phil Carr</strong>
                             </span>
-                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr"
-                                style="font-weight: 400">
+                            <span class="fxs_author_description fxs_txt_size_xsmall fxs_txt_corp_dark_1_clr">
                                 Professional Trader and Trainer <strong>The Gold & Silver Club</strong>
                             </span>
                         </span>
@@ -270,9 +259,9 @@
 
             <div class="fxs_clearfix fxs_marginBase"></div>
             <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
-                <span class="far fa-arrow-circle-left" aria-hidden="true"></span> Keep reading the news
+                <span class="far fa-angle-double-left" aria-hidden="true"></span> Keep reading the news
             </a>
-            <a href="getPremium.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+            <a href="getPremium.html" class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
                 Continue
             </a>
         </div>
@@ -280,45 +269,6 @@
     <footer class="fxs_footer fxs_modal_footer">
         <p>&nbsp;</p>
     </footer>
-    <!-- Code injected by live-server -->
-    <script type="text/javascript">
-        // <![CDATA[  <-- For SVG support
-        if ('WebSocket' in window) {
-            (function () {
-                function refreshCSS() {
-                    var sheets = [].slice.call(document.getElementsByTagName("link"));
-                    var head = document.getElementsByTagName("head")[0];
-                    for (var i = 0; i < sheets.length; ++i) {
-                        var elem = sheets[i];
-                        var parent = elem.parentElement || head;
-                        parent.removeChild(elem);
-                        var rel = elem.rel;
-                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-                        }
-                        parent.appendChild(elem);
-                    }
-                }
-                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-                var address = protocol + window.location.host + window.location.pathname + '/ws';
-                var socket = new WebSocket(address);
-                socket.onmessage = function (msg) {
-                    if (msg.data == 'reload') window.location.reload();
-                    else if (msg.data == 'refreshcss') refreshCSS();
-                };
-                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-                    console.log('Live reload enabled.');
-                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-                }
-            })();
-        }
-        else {
-            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-        }
-        // ]]>
-    </script>
-
 </body>
 
 </html>
