--- a/form.html
+++ b/form.html
@@ -321,9 +321,8 @@
             <div class="fxs_clearfix fxs_marginBase"></div>
             <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
                 <span class="fas fa-angle-double-left"></span> Keep reading the news
-
             </a>
-            <a href="newsletter.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+            <a href="newsletter.html" class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
                 Continue
             </a>
         </div>
