--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="getApp.html" title="get App">Get Mobile App
+                            <a href="getAppDesktop.html" title="get App">Get Mobile App Mobile
+                        </h3>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h3 class="fxs_entryHeadline">
+                            <a href="getAppMobile.html" title="get App">Get Mobile App Desktop
                         </h3>
                     </article>
                 </li>
