--- a/getApp.html
+++ b/getApp.html
@@ -1,128 +1,18 @@
 <html lang="en" class="">
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8">
-    <link rel="apple-touch-icon" sizes="180x180"
-        href="https://staticcontent.fxstreet.com/website/static-html/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="https://staticcontent.fxstreet.com/website/static-html/favicon.png"
-        sizes="32x32">
-    <link rel="shortcut icon" href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico">
-    <link rel="preload"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-        as="style">
-    <link rel="preload" href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" as="style">
-    <link rel="preload" href="https://kit.fontawesome.com/22a9d93fa2.js" as="script">
-    <link rel="preconnect" href="https://staticcontent.fxstreet.com" crossorigin="">
-    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link rel="preconnect" href="https://use.fontawesome.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
-        rel="stylesheet">
-    <link href="https://staticcontent.fxstreet.com/website/css/fxs_screen.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/22a9d93fa2.js"></script>
-    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all">
-    <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all">
-    <title>
-        FXStreet - The Foreign Exchange Market
-    </title>
-    <meta name="lang" content="en">
-    <meta name="description"
-        content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar.">
-    <meta name="keywords" content="forex, trading, fx, trade, news, reports, analysis">
-    <link rel="stylesheet" href="boarding.css">
-</head>
-
-<body cz-shortcut-listen="true">
-    <header class="fxs_simpleHeader">
-        <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
-                <span>Back</span>
-            </a>
-            <a href="index.html" class="fxs_logo"></a>
-        </div>
-    </header>
-    <div class="fxs_flexbox_justify_around_items_start">
-        <div class="fxs_poster fxs_big-poster">
-            <h3 class="fxs_headline_medium">Don't let economic events get ahead of you</h3>
-            <p class="fxs_entryPlain_txt_large">
-                <strong>Get FXS mobile app and receive early notifications from
-                    your selected economic events.</strong>
-            </p>
-            <div class="fxs_marginBase_bottom">
-            </div>
-            <div class="fxs_formGroup">
-                <label class="fxs_checkboxGroup">
-                    <input type="checkbox" id="terms"> Send a link to my device to download FXS Mobile App.
-                </label>
-            </div>
-            <div class="fxs_marginBase_bottom">
-            </div>
-            <a href="index.html" class="fxs_btn fxs_btn_cta fxs_fRight">
-                Complete account
-            </a>
-        </div>
-        <div class="fxs_poster fxs_big-poster">
-            <h3 class="fxs_headline_medium">Don't let economic events get ahead of you</h3>
-            <p class="fxs_entryPlain_txt_large">
-                <strong>Get FXS mobile app and receive early notifications from
-                    your selected economic events.</strong>
-            </p>
-            <div class="fxs_marginBase_bottom">
-            </div>
-            <div class="fxs_marginBase_bottom">
-            </div>
-            <a href="https://play.google.com/store/apps/details?id=com.fxstreet.forexnews&hl=en" class="fxs_btn fxs_btn_cta fxs_fRight">
-                Get the app
-            </a>
-            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
-                 Keep reading the news
-            </a>
-        </div>
-    </div>
-    <footer class="fxs_footer fxs_modal_footer">
-        <p>&nbsp;</p>
-    </footer>
-    <!-- Code injected by live-server -->
-    <script type="text/javascript">
-        // <![CDATA[  <-- For SVG support
-        if ('WebSocket' in window) {
-            (function () {
-                function refreshCSS() {
-                    var sheets = [].slice.call(document.getElementsByTagName("link"));
-                    var head = document.getElementsByTagName("head")[0];
-                    for (var i = 0; i < sheets.length; ++i) {
-                        var elem = sheets[i];
-                        var parent = elem.parentElement || head;
-                        parent.removeChild(elem);
-                        var rel = elem.rel;
-                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-                        }
-                        parent.appendChild(elem);
-                    }
-                }
-                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-                var address = protocol + window.location.host + window.location.pathname + '/ws';
-                var socket = new WebSocket(address);
-                socket.onmessage = function (msg) {
-                    if (msg.data == 'reload') window.location.reload();
-                    else if (msg.data == 'refreshcss') refreshCSS();
-                };
-                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-                    console.log('Live reload enabled.');
-                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-                }
-            })();
+  <head>
+    <script>
+        window.mobileAndTabletcheck = function() {
+            var check = false;
+            (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino|android|ipad|playbook|silk/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))) check = true;})(navigator.userAgent||navigator.vendor||window.opera);
+            return check;
+        };
+        if(window.mobileAndTabletcheck()){
+            window.location.pathname = 'getAppMobile.html'
+        }else{
+            window.location.pathname = 'getAppDesktop.html'
         }
-        else {
-            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-        }
-        // ]]>
     </script>
+  </head>
 
-</body>
-
+  <body></body>
 </html>
