--- a/newsletter.html
+++ b/newsletter.html
@@ -98,14 +98,11 @@
                     <span class="fxs_newsletter-name">Subscribe All</span>
                 </label>
             </div>
-
-
-
             <div class="fxs_clearfix fxs_marginBase"></div>
             <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
-                <span class="far fa-arrow-circle-left" aria-hidden="true"></span> Keep reading the news
+                <span class="fas fa-angle-double-left"></span> Keep reading the news
             </a>
-            <a href="authors.html" class="fxs_btn fxs_btn_cta fxs_fRight">
+            <a href="authors.html" class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
                 Continue
             </a>
         </div>
@@ -113,45 +110,6 @@
     <footer class="fxs_footer fxs_modal_footer">
         <p>&nbsp;</p>
     </footer>
-    <!-- Code injected by live-server -->
-    <script type="text/javascript">
-        // <![CDATA[  <-- For SVG support
-        if ('WebSocket' in window) {
-            (function () {
-                function refreshCSS() {
-                    var sheets = [].slice.call(document.getElementsByTagName("link"));
-                    var head = document.getElementsByTagName("head")[0];
-                    for (var i = 0; i < sheets.length; ++i) {
-                        var elem = sheets[i];
-                        var parent = elem.parentElement || head;
-                        parent.removeChild(elem);
-                        var rel = elem.rel;
-                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-                        }
-                        parent.appendChild(elem);
-                    }
-                }
-                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-                var address = protocol + window.location.host + window.location.pathname + '/ws';
-                var socket = new WebSocket(address);
-                socket.onmessage = function (msg) {
-                    if (msg.data == 'reload') window.location.reload();
-                    else if (msg.data == 'refreshcss') refreshCSS();
-                };
-                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-                    console.log('Live reload enabled.');
-                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-                }
-            })();
-        }
-        else {
-            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-        }
-        // ]]>
-    </script>
-
 </body>
 
 </html>
