--- a/getAppMobile.html
+++ b/getAppMobile.html
@@ -97,7 +97,8 @@
           >
         </p>
         <div class="fxs_clearfix fxs_marginBase_bottom"></div>
-        <p class="fxs_txt_center">
+
+        <p class="fxs_left-mobile-center">
           <a
             href="https://play.google.com/store/apps/details?id=com.fxstreet.forexnews&hl=en"
             class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big"
@@ -105,8 +106,8 @@
             Get the app
           </a>
         </p>
-        <div class="fxs_clearfix fxs_marginBase_bottom"></div>
-        <p class="fxs_txt_center">
+
+        <p class="fxs_right-mobile-center">
           <a class="fxs_mutedLink fxs_back" href="index.html">
             Keep reading the news
           </a>
