--- a/getPremium.html
+++ b/getPremium.html
@@ -234,15 +234,19 @@
         </div>
         <!-- Fin bloque de pago----------------------- -->
         <div class="fxs_clearfix fxs_marginBase"></div>
-        <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
-          <span class="fas fa-angle-double-left"></span> Keep reading the news
-        </a>
-        <a
-          href="getApp.html"
-          class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big"
-        >
-          Continue without subscribing
-        </a>
+        <p class="fxs_left-mobile-center">
+          <a class="fxs_mutedLink  fxs_back" href="index.html">
+            <span class="fas fa-angle-double-left fxs_hidden_st"></span> Keep reading the news
+          </a>
+        </p>
+        <p class="fxs_right-mobile-center">
+          <a
+            href="getApp.html"
+            class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big"
+          >
+            Continue without subscribing
+          </a>
+        </p>
       </div>
     </div>
     <footer class="fxs_footer fxs_modal_footer">
