--- a/form.html
+++ b/form.html
@@ -319,12 +319,19 @@
             </p>
 
             <div class="fxs_clearfix fxs_marginBase"></div>
-            <a class="fxs_mutedLink fxs_fLeft fxs_back" href="./login.html">
-                <span class="fas fa-angle-double-left"></span> Keep reading the news
+                    <p class="fxs_left-mobile-center">
+
+            <a class="fxs_mutedLink  fxs_back" href="./login.html">
+                <span class="fas fa-angle-double-left fxs_hidden_st"></span> Keep reading the news
             </a>
-            <a href="newsletter.html" class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
+                    </p>
+        <p class="fxs_right-mobile-center">
+
+            <a href="newsletter.html" class="fxs_btn fxs_btn_cta  fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
                 Continue
             </a>
+                                </p>
+
         </div>
         <script src="./js/onboardingform.js"></script>
     </div>
