--- a/newsletter.html
+++ b/newsletter.html
@@ -100,7 +100,7 @@
             </div>
             <div class="fxs_clearfix fxs_marginBase"></div>
             <a class="fxs_mutedLink fxs_fLeft fxs_back" href="index.html">
-                <span class="fas fa-angle-double-left"></span> Keep reading the news
+                <span class="fas fa-angle-double-left fxs_hidden_st"></span> Keep reading the news
             </a>
             <a href="authors.html" class="fxs_btn fxs_btn_cta fxs_fRight fxs_btn_small fxs_paddingBase_right_big fxs_paddingBase_left_big">
                 Continue
