--- a/getPremium.html
+++ b/getPremium.html
@@ -112,31 +112,31 @@
               <i class="fas fa-check" aria-hidden="true"></i
               ><strong>Telegram </strong> channel
             </li>
-            <li class="fxs_hidden_l">
+            <li class="fxs_hidden_s">
               <i class="fas fa-check" aria-hidden="true"></i>Overseas
               <strong> community</strong>
             </li>
-            <li class="fxs_hidden_l">
+            <li class="fxs_hidden_s">
               <i class="fas fa-check" aria-hidden="true"></i
               ><strong>Live &amp; recorded </strong> webinars
             </li>
-            <li class="fxs_hidden_l">
+            <li class="fxs_hidden_s">
               <i class="fas fa-check" aria-hidden="true"></i>Multi-device
               <strong> notifications</strong>
             </li>
-            <li class="fxs_hidden_l">
+            <li class="fxs_hidden_s">
               <i class="fas fa-check" aria-hidden="true"></i>The
               <strong> most advanced trading tips and techniques</strong>
             </li>
-            <li class="fxs_hidden_l">
+            <li class="fxs_hidden_s">
               <i class="fas fa-check" aria-hidden="true"></i>Dedicated
               <strong> teachers </strong>
               and
               <strong> experienced traders</strong>
             </li>
-            <li class="fxs_visible_l">
+            <li class="fxs_visible_st">
               <i class="fas fa-check" aria-hidden="true"></i
-              ><strong>..and much more!</strong>
+              ><strong>...and much more!</strong>
             </li>
           </ol>
         </div>
@@ -236,7 +236,7 @@
         <div class="fxs_clearfix fxs_marginBase"></div>
         <p class="fxs_left-mobile-center">
           <a class="fxs_mutedLink  fxs_back" href="index.html">
-            <span class="fas fa-angle-double-left fxs_hidden_st"></span> Keep reading the news
+            <span class="fas fa-angle-double-left fxs_hidden_s"></span> Keep reading the news
           </a>
         </p>
         <p class="fxs_right-mobile-center">
