--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </header>
         </div>
     </div>
-    <p>
-        <a href="form.html">Complete User data form</a>
-    </p>
-    <div class="fxs_txt_center">
+    <div class="fxs_detail">
+        <header class="fxs_sectionTitle fxs_sectionTitle_innerDetail">
+            <h1 class="fxs_sectionTitle_header">Complete User data form</h1>
+        </header>
         <hr class="fxs_divider_wide">
         <aside fxs_sf_widget="" class="fxs_entriesList fxs_links_list_module" fxs_name="analysisList">
             <ol>
@@ -106,4 +106,5 @@
         <p>&nbsp;</p>
     </footer>
 </body>
+
 </html>
