--- a/form.html
+++ b/form.html
@@ -322,7 +322,7 @@
                     <p class="fxs_left-mobile-center">
 
             <a class="fxs_mutedLink  fxs_back" href="./login.html">
-                <span class="fas fa-angle-double-left fxs_hidden_s"></span> Keep reading the news
+                <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
             </a>
                     </p>
         <p class="fxs_right-mobile-center">
