--- a/getPremium.html
+++ b/getPremium.html
@@ -236,7 +236,7 @@
         <div class="fxs_clearfix fxs_marginBase"></div>
         <p class="fxs_left-mobile-center">
           <a class="fxs_mutedLink  fxs_back" href="index.html">
-            <span class="fas fa-angle-double-left fxs_hidden_s"></span> Keep reading the news
+            <span class="fas fa-angle-double-left fxs_hidden_s_iBlock"></span> Keep reading the news
           </a>
         </p>
         <p class="fxs_right-mobile-center">
