change app links

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="getAppDesktop.html" title="get App">Get Mobile App Mobile
+                            <a href="getAppDesktop.html" title="get App">Get App from Mobile
                         </h3>
                     </article>
                 </li>
                 <li>
                     <article>
                         <h3 class="fxs_entryHeadline">
-                            <a href="getAppMobile.html" title="get App">Get Mobile App Desktop
+                            <a href="getAppMobile.html" title="get App">Get App from Desktop
                         </h3>
                     </article>
                 </li>
